<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="#fff"
              tools:context="com.capstone.unid.unidscanner.LoginActivity">

    <ImageView
        android:layout_width="@dimen/unid_logo_width"
        android:layout_height="@dimen/unid_logo_height"
        android:src="@drawable/unid_logo"
        android:contentDescription="@string/unid_logo"/>

    <TextView
        android:id="@+id/login_with_workday"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:drawablePadding="0dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:text="@string/action_sign_in"
        android:textColor="@color/colorWorkdayLogo"
        android:textSize="14sp"
        android:shadowColor="#555"
        android:shadowRadius="1"
        android:textScaleX="1.03"
        android:drawableEnd="@drawable/workday_logo_scaled"/>

    <com.capstone.unid.unidscanner.LoginListRecyclerView
        android:id="@+id/login_recycler_view"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_list_height"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"/>

    <TextView
        android:id="@+id/add_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/add_new_user"
        android:textSize="18sp"
        android:textColor="#383838"
        android:textStyle="italic"
        android:background="@drawable/add_account_bg"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

</LinearLayout>
