<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <com.varvet.barcodereadersample.camera.CameraSourcePreview
        android:id="@+id/barcode_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.varvet.barcodereadersample.camera.CameraSourcePreview>

    <LinearLayout
        android:id="@+id/student_id_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barcode_capture_activity_buttons"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:animateLayoutChanges="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/student_id_pic"
            android:layout_width="@dimen/photo_id_sidelen"
            android:layout_height="@dimen/photo_id_sidelen"
            android:src="@drawable/ic_perm_identity_black_48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/student_id_pic"/>

        <TextView
            android:id="@+id/student_id_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:shadowColor="#ffffff"
            android:shadowRadius="10"
            android:textSize="22sp"/>

    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/connecting_spinkit"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Color="@color/colorAccent"
        android:background="@android:color/transparent"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barcode_capture_activity_buttons"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/barcode_capture_activity_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/flash_toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_flash_off_white_48dp"
            android:contentDescription="@string/flash_toggle"/>

        <ImageButton
            android:id="@+id/show_last_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_history_white_48dp"
            android:contentDescription="@string/show_last_student"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/undo_last_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_undo_white_48dp"
        android:contentDescription="@string/show_last_student"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>
